# nirilike

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  NiriPassElement.cpp  NiriPassElement.hpp  README.md  build.sh  hyprpm.toml  main.cpp  mise.local.toml  mise.toml  overview.cpp  overview.hpp
